--- a/views/index-normal.ejs
+++ b/views/index-normal.ejs
@@ -14,9 +14,9 @@
 <div  class="division-line"></div>
 <div class="sort-container">
 	<div class="sort-button"   >Sort By :</div>
-	<div class="sort-button selected-asc" onclick="printUsers(this)" value="name"><div>Name</div><div class="symbol"></div></div>
-	<div class="sort-button" onclick="printUsers(this)" value="location"><div>Location</div><div class="symbol"></div></div>
-	<div class="sort-button" onclick="printUsers(this)" value="followers"><div>Followers</div><div class="symbol"></div></div>
+	<div class="sort-button selected-asc" onclick="printUsers(this)" style="cursor : pointer" value="name"><div>Name</div><div class="symbol"></div></div>
+	<div class="sort-button" onclick="printUsers(this)" style="cursor : pointer" value="location"><div>Location</div><div class="symbol"></div></div>
+	<div class="sort-button" onclick="printUsers(this)" style="cursor : pointer" value="followers"><div>Followers</div><div class="symbol"></div></div>
 </div>
 <div id = "card-container" class = 'card-container'>
 
